--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -1,4 +1,5 @@
-notifications-rest-endpoint.host=localhost
+#notifications-rest-endpoint.host=localhost
+notifications-rest-endpoint.host=http://truck-center.herokuapp.com
 #notifications-rest-endpoint.host=92.222.77.75
 
 notifications-rest-endpoint.port=8081
@@ -8,7 +9,8 @@ notifications-rest-endpoint.auth.username=android-truck-app
 notifications-rest-endpoint.auth.password=a4&f24E0!
 
 ### ActiveMQ configuration
-activemq.broker.url=tcp://localhost:61616
+#activemq.broker.url=tcp://localhost:61616
+activemq.broker.url=tcp://92.222.77.75:61616
 activemq.broker.username=admin
 activemq.broker.password=admin
 
@@ -16,10 +18,11 @@ drivers-positions.queue=DRIVERS.POSITIONS
 
 
 ### Alerts API
-alerts-rest-api.host=localhost
+#alerts-rest-api.host=localhost
+alerts-rest-api.host=http://truck-center.herokuapp.com
 alerts-rest-api.protocol=http
 #alerts-rest-api.host=92.222.77.75
-alerts-rest-api.port=8080
+alerts-rest-api.port=80
 alerts-rest-api.path=/rest/alerts
 alerts-rest-api.url=${alerts-rest-api.protocol}://${alerts-rest-api.host}:${alerts-rest-api.port}${alerts-rest-api.path}
 alerts-rest-api.username=admin
@@ -27,4 +30,5 @@ alerts-rest-api.password=admin
 
 
 ### Esper configuration
-esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(10) GROUP BY driverId HAVING COUNT(DISTINCT latitude) = 1 AND COUNT(DISTINCT longitude) = 1 AND COUNT(*) > 1
+#esper.stopped-driver.query=SELECT * FROM PositionNotification.win:time(10) GROUP BY driverId HAVING COUNT(DISTINCT latitude) = 1 AND COUNT(DISTINCT longitude) = 1 AND COUNT(*) > 1
+esper.stopped-driver.query=SELECT * FROM PositionNotification
