--- a/truck-center-webapp/src/main/resources/application-heroku.properties
+++ b/truck-center-webapp/src/main/resources/application-heroku.properties
@@ -8,7 +8,7 @@ logging.level.com.ingesup=DEBUG
 
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://ba0afe6a0044df:e0ac914f@eu-cdbr-west-01.cleardb.com/heroku_a576c312d5ed9d7?reconnect=true
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_a576c312d5ed9d7?reconnect=true
 spring.datasource.username=ba0afe6a0044df
 spring.datasource.password=e0ac914f
 
@@ -23,7 +23,7 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### TRUCK-CENTER DATABASE ###
-truck-center.initialize=true
+truck-center.initialize=false
 truck-center.roles=ROLE_ADMIN,ROLE_DRIVER
 
 truck-center.adminEmail=admin@admin.fr
