--- a/truck-center-mule/src/main/resources/mule.properties
+++ b/truck-center-mule/src/main/resources/mule.properties
@@ -1,6 +1,6 @@
-notifications-rest-endpoint.host=localhost
+#notifications-rest-endpoint.host=localhost
 #notifications-rest-endpoint.host=truck-center.herokuapp.com
-#notifications-rest-endpoint.host=92.222.77.75
+notifications-rest-endpoint.host=92.222.77.75
 
 notifications-rest-endpoint.port=8081
 notifications-rest-endpoint.path=/positionService
@@ -9,8 +9,8 @@ notifications-rest-endpoint.auth.username=android-truck-app
 notifications-rest-endpoint.auth.password=a4&f24E0!
 
 ### ActiveMQ configuration
-activemq.broker.url=tcp://localhost:61616
-#activemq.broker.url=tcp://92.222.77.75:61616
+#activemq.broker.url=tcp://localhost:61616
+activemq.broker.url=tcp://92.222.77.75:61616
 activemq.broker.username=admin
 activemq.broker.password=admin
 
